Corrected cropped background issue

--- a/src/App.css
+++ b/src/App.css
@@ -13,11 +13,14 @@
 
 .App {
   text-align: center;
-  background: url(./KIO-bg.png) no-repeat fixed;
+  background: url(./KIO-bg.png) center center repeat fixed;
   margin: 0 auto;
-  max-width: 960px;
   overflow-x: hidden;
   overflow-y: hidden;
+}
+
+.App div {
+  max-width: 870px;
 }
 
 .App-logo {
@@ -44,7 +47,7 @@
 }
 
 @media only screen and (max-width: 767px) {
-  body {
-    background-image: url(./KIO-bg-media.png);
+ .App {
+    background-image: url(./KIO-bg-media.png) center center repeat fixed;
   }
 }
